# motions-tracker

./: .gitignore  LICENSE  README.md  main.py  setup.cfg
src/motionstracker/: __init__.py  __main__.py
src/motionstracker/utils/: Class.py  functions.py  variables.py
