[metadata]
name = motionstracker
version = 2.1.1
author = RidoineEl
author_email = ridoineelofficiel@gmail.com
description = A module that allows you to Track the movements of webcam images and save them as images or as a single video.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ridoineel/motions-tracker
project_urls =
    Bug Tracker = https://github.com/Ridoineel/motions-tracker/log-module/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    opencv-python
    numpy
    scipy
    matplotlib
    pillow

[options.packages.find]
where = src
